# sleap-sweep

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
sleap_sweep/: __init__.py  main.py
sleap_sweep/train/: config.py
