[project]
name = "sleap-sweep"
authors = [{name = "Sofia Minano", email= "yourname@example.com"}]
description = "Hyperparameter sweep for SLEAP"
readme = "README.md"
requires-python = ">=3.9.0"
dynamic = ["version"]

dependencies = [
  "sleap[pypi]==1.3.3",
  "optuna"
]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
"Homepage" = "https://github.com/sfmig/sleap-sweep"
"Bug Tracker" = "https://github.com/sfmig/sleap-sweep/issues"
"Documentation" = "https://github.com/sfmig/sleap-sweep"
"Source Code" = "https://github.com/sfmig/sleap-sweep"
"User Support" = "https://github.com/sfmig/sleap-sweep/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
]

[project.scripts]
optimise = "sleap_sweep.main:main"

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sleap_sweep*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=sleap_sweep"
filterwarnings = [
    "error",
]

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
lint.select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort
  # You can see what all the rules do here: https://docs.astral.sh/ruff/rules/
  # Some additional ruff rules that might be useful (uncomment to enable)
  #"UP",  # pyupgrade
  #"B",   # flake8 bugbear
  #"SIM", # flake8 simplify
  #"C90", # McCabe complexity
]
fix = true

[tool.ruff.format]
docstring-code-format = true # Also format code in docstrings (e.g. examples)

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311}
isolated_build = True

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=sleap_sweep --cov-report=xml
"""


[tool.codespell]
skip = '.git'
check-hidden = true
